--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,14 +1,25 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 @import "fonts.css";
 
 .footer {
+    display: -webkit-box;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+            flex-direction: row;    
     width: 1126px;
     height: 308px;
-    justify-content: space-between;
-    align-items: flex-end;
+    -webkit-box-pack: justify;
+        justify-content: space-between;
+    -webkit-box-align: end;
+        align-items: flex-end;    
     border-top: 1px solid rgba(188, 208, 229, 0.496913);
-
 }
 
 .footer__logo {
@@ -26,13 +37,18 @@
 }
 
 .footer__signup {
+    display: -webkit-box;
     display: flex;
     height: 108px;
-    flex-direction: column;
-    justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+            justify-content: space-between;
 }
 
 .footer__phone {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     width: 325px;
     height: 48px;
