--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,8 +1,17 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 @import "fonts.css";
 
 .navbar {
+    display: -webkit-box;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        justify-content: space-between;    
     list-style-type:none;
     font-family: Poppins;
 	font-size: 14px;
@@ -16,5 +25,6 @@
 }
 
 .navbar--column {
-    flex-direction: column;
-}
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;}
