--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,24 +1,37 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 @import "fonts.css";
 
 .navigation {
+	display: -webkit-box;
 	display: flex;
 	width: 1126px;
 	height: 108px;
 	padding-bottom: 30px;
-	align-items: center;
-	justify-content: space-between;
+	-webkit-box-align: center;
+		align-items: center;
+	-webkit-box-pack: justify;
+		justify-content: space-between;
 }
 
 .navigation__buttons {
 	width: 234px;
+	display: -webkit-box;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+		justify-content: space-between;
 }
 
 .navigation__logo {
+	display: -webkit-box;
 	display: flex;
-	flex-grow: 0.8;
-}
+	-webkit-box-flex: 0.8;
+		flex-grow: 0.8;}
 
 .navigation__img {
 	width: 187px;
